; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/pshinter/extr_pshalgo.c_psh_hint_snap_stem_side_delta.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/pshinter/extr_pshalgo.c_psh_hint_snap_stem_side_delta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @psh_hint_snap_stem_side_delta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @psh_hint_snap_stem_side_delta(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @FT_PIX_ROUND(i64 %8)
  %10 = load i64, i64* %4, align 8
  %11 = sub nsw i64 %9, %10
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i64 @FT_PIX_ROUND(i64 %14)
  %16 = load i64, i64* %4, align 8
  %17 = sub nsw i64 %15, %16
  %18 = load i64, i64* %5, align 8
  %19 = sub nsw i64 %17, %18
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i64 @FT_ABS(i64 %20)
  %22 = load i64, i64* %7, align 8
  %23 = call i64 @FT_ABS(i64 %22)
  %24 = icmp sle i64 %21, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %2
  %26 = load i64, i64* %6, align 8
  store i64 %26, i64* %3, align 8
  br label %29

27:                                               ; preds = %2
  %28 = load i64, i64* %7, align 8
  store i64 %28, i64* %3, align 8
  br label %29

29:                                               ; preds = %27, %25
  %30 = load i64, i64* %3, align 8
  ret i64 %30
}

declare dso_local i64 @FT_PIX_ROUND(i64) #1

declare dso_local i64 @FT_ABS(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
